adding new testis

--- a/views/pages/labFun.ejs
+++ b/views/pages/labFun.ejs
@@ -235,7 +235,7 @@ style='background-image:url("img/bg/bg4.jpg")'>
 
 <div class='grid-x grid-container medium-offset-3 large-offset-4 grid-padding-y grid-padding-x add-padd' >
   <div class='medium-6 large-5 cell'>
-    <div class='grid-x grid-padding-x grid-padding-y'>
+    <div class='grid-x grid-padding-x grid-margin-y'>
       <div class='cell shrink border-right'>
         <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
       </div>
