--- a/views/pages/labNews.ejs
+++ b/views/pages/labNews.ejs
@@ -23,7 +23,7 @@ style='background-image:url("img/bg/bg1.jpg")'>
         <div class='in-vc'>
           <h4><%-results[i].name %></h4>
           <p class="web-pro-text">
-            <%-results[i].description %>
+            <%=results[i].description %>
           </p>
         </div>
       </div>
