--- a/public/css/app.css
+++ b/public/css/app.css
@@ -38,13 +38,14 @@ body {
   -moz-transition: all .50s ease-in-out;
   -o-transition: all .50s ease-in-out;
   transition: all .50s ease-in-out;
+  position: fixed;
 }
 .fixit {
-  position: fixed;
   z-index: 9999;
   top: 0px;
   width: 100%;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2);
+  background-color: #ffffff !important;
 }
 
 .top-bar-logo {
