--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,6 +32,9 @@
               <% } %>
             </li>
             <% } %>
+            <li>
+              <i class="fi-list"></i>
+            </li>
           </ul>
         </div>
       </div>
