--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,7 +33,9 @@
             </li>
             <% } %>
             <li>
-              <i class="fi-list"></i>
+              <a class='top-bar-link'>
+                <i class="fi-list"></i>
+              </a>
             </li>
           </ul>
         </div>
