--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
           </a>
         </div>
       </div>
-      <div class="auto cell out-vc top-bar-center" data-equalizer-watch>
+      <div class="auto cell out-vc top-bar-right" data-equalizer-watch>
         <div class="in-vc">
           <ul class="dropdown menu show-for-medium" data-dropdown-menu>
             <% for(let i = 0; i < pages.length; i++) { %>
