--- a/public/css/app.css
+++ b/public/css/app.css
@@ -64,10 +64,8 @@ body {
   transition: all .50s ease-in-out;
 }
 
-.top-bar-center {
-	border: 1px solid #f1f1f1;
-	border-top: none;
-	border-bottom: none;
+.top-bar-right {
+	float: right;
 }
 
 .top-bar-link {
