--- a/public/css/app.css
+++ b/public/css/app.css
@@ -69,7 +69,8 @@ body {
 }
 
 .top-bar-link {
-  color: #439aa5;
+  color: #fff;
+  font-weight: bold;
   font-family: "Amiri",serif;
   font-size: 18px;
 }
