--- a/public/css/app.css
+++ b/public/css/app.css
@@ -68,12 +68,12 @@ body {
 	float: right;
 }
 
-.fixit > .top-bar-link {
-  color: #439aa5;
+.header-menu-items > li > a > .top-bar-link {
+  color: #fff;
 }
 
 .top-bar-link {
-  color: #fff;
+  color: #439aa5;
   font-weight: bold;
   font-family: "Amiri",serif;
   font-size: 18px;
