--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
       </div>
       <div class="auto cell out-vc top-bar-right" data-equalizer-watch>
         <div class="in-vc">
-          <ul class="dropdown menu show-for-medium" data-dropdown-menu>
+          <ul class="dropdown menu show-for-medium white" id='header-menu-items' data-dropdown-menu>
             <% for(let i = 0; i < pages.length; i++) { %>
             <li>
               <a class='top-bar-link' href="<% if(dirName) { %><%=dirName%><%}%><%= pages[i].link %>">
