--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,10 +12,15 @@ style='background-image:url("img/bg/bg1.jpg")'>
 <div class='grid-x grid-padding-x grid-container grid-padding-y add-padd'  data-equalizer>
   <div class='medium-6 large-7 cell out-vc'  data-equalizer-watch>
     <div class='in-vc'>
-      <h3 class='center'>Welcome</h3>
+      <h3 class='center'>Mission</h3>
       <hr class="center-ball">
       <p class='web-pro-text'>
-        The Gurkar lab is interested in defining the molecular mechanisms that drive aging in response to DNA damage, which accumulates in all of us over time. The majority of individuals over the age of 65 years suffer from at least two chronic degenerative diseases- neurodegeneration, cardiovascular disease, diabetes, cancer etc. These chronic diseases of the elderly consume an increasingly large fraction of our health care costs and rob individuals of their independence and quality of life.
+        Majority of individuals over the age of 65 years suffer from at least two chronic
+degenerative diseases- neurodegeneration, cardiovascular disease, diabetes, cancer etc.
+These chronic diseases of the elderly consume an increasingly large fraction of our health care
+costs and rob individuals of their independence and quality of life. The Gurkar lab is interested
+in defining the molecular mechanisms that drive aging in response to DNA damage, which
+accumulates in all of us over time.
       </p>
     </div>
   </div>
@@ -28,7 +33,9 @@ style='background-image:url("img/bg/bg1.jpg")'>
   </div>
   <div class='small-12 cell'>
     <h4 class='center my-small-h4 '>
-      Developing therapies to target the primary risk factor for all of these diseases, <em>aging itself</em>, is a promising yet challenging solution. The first step is to define the molecular mechanisms that drive aging. We believe that this will reveal novel therapeutic targets that can be further harnessed to extend healthy life.
+      <em>“We’ve put more effort into helping folks reach old age than into helping them enjoy it.”</em>
+      <br/>
+      (Frank Howard Clark). The Gurkar lab wants to change this.
     </h4>
   </div>
 </div>
