--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,10 +43,14 @@
       <div class='hamburger-menu-list'>
         <div class='grid-x grid-padding-x grid-padding-y'>
           <div class='cell'>
-            <h4>pages.hamburger[i].title</h4>
+            <h4><%=pages.hamburger[i].title%></h4>
             <ul class="vertical menu">
               <% for(let j = 0; j < pages.hamburger[i].link.length; j++) { %>
-                <li><a href="<% if(dirName) { %><%=dirName%><%}%><%= pages.hamburger[i].link[j].link %>">pages.hamburger[i].link[j].title</a></li>
+                <li>
+                  <a href="<% if(dirName) { %><%=dirName%><%}%><%= pages.hamburger[i].link[j].link %>">
+                    <%=pages.hamburger[i].link[j].title%>
+                  </a>
+                </li>
                 <% } %>
             </ul>
           </div>
