--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -44,7 +44,7 @@
         <div class='grid-x grid-padding-x grid-padding-y'>
           <div class='cell'>
             <h4><%=pages.hamburger[i].title%></h4>
-            <ul class="vertical menu">
+            <ul class="vertical menu align-left">
               <% for(let j = 0; j < pages.hamburger[i].link.length; j++) { %>
                 <li>
                   <a href="<% if(dirName) { %><%=dirName%><%}%><%= pages.hamburger[i].link[j].link %>">
