Adding heading styles

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -126,6 +126,10 @@ body {
 }
 
 .hamburger-menu-items {
+  position: absolute;
+  z-index: 9999;
+  height: 100%;
+  width: 100%;
   flex: 1;
   flex-direction: column;
 }
