Adding heading styles

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,8 +11,8 @@
           </a>
         </div>
       </div>
-      <div class="auto cell out-vc top-bar-right" data-equalizer-watch>
-        <div class="in-vc">
+      <div class="auto cell out-vc" data-equalizer-watch>
+        <div class="in-vc top-bar-right">
           <ul class="dropdown menu show-for-medium white" id='header-menu-items' data-dropdown-menu>
             <% for(let i = 0; i < pages.main.length; i++) { %>
             <li>
