Adding heading styles

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -32,6 +32,9 @@ body {
 }
 
 /* Top bar styles */
+header {
+  position: relative;
+}
 #header {
   background-color: transparent;
   -webkit-transition: all .50s ease-in-out;
