--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,5 @@
-<header id='header'>
+<header >
+  <div id='header'>
     <div class="grid-x grid-padding-x" data-equalizer>
       <div class="shrink cell out-vc" data-equalizer-watch>
         <div class="in-vc">
@@ -37,7 +38,7 @@
         </div>
       </div>
     </div>
-  </header>
+  </div>
   <div class='hamburger-menu-items grid-x medium-up-3'>
     <% for(let i = 0; i < pages.hamburger.length; i++) { %>
       <div class='hamburger-menu-list cell'>
@@ -58,4 +59,5 @@
       </div>
     <% } %>
   </div>
+</header>
   <% include ../partials/mobileHeader %>  
