--- a/public/css/app.css
+++ b/public/css/app.css
@@ -130,8 +130,10 @@ body {
 
 .hamburger-menu-list {
   padding-top: 150px;
-  flex: 1;
-  flex-direction: row;
+  background-attachment: scroll;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   -webkit-transition: all .50s ease-in-out;
   -moz-transition: all .50s ease-in-out;
   -o-transition: all .50s ease-in-out;
