Adding heading styles

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,7 +43,7 @@
   </div>
   <div class='hamburger-menu-items grid-x medium-up-3'>
     <% for(let i = 0; i < pages.hamburger.length; i++) { %>
-      <div class='hamburger-menu-list cell' style="background-image: url('<% pages.hamburger[i].image %>');">
+      <div class='hamburger-menu-list cell' style="background-image: url('<%= pages.hamburger[i].image %>');">
         <div class='grid-x grid-padding-x grid-padding-y'>
           <div class='cell'>
             <h4><%=pages.hamburger[i].title%></h4>
