--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -46,7 +46,7 @@
       <div class='hamburger-menu-list cell' style="background-image: url('<%= pages.hamburger[i].image %>');">
         <div class='grid-x grid-padding-x grid-padding-y'>
           <div class='cell'>
-            <h4><%=pages.hamburger[i].title%></h4>
+            <h4 class='hamburger-header'><%=pages.hamburger[i].title%></h4>
             <ul class="vertical menu align-left">
               <% for(let j = 0; j < pages.hamburger[i].link.length; j++) { %>
                 <li>
