--- a/public/css/app.css
+++ b/public/css/app.css
@@ -143,7 +143,8 @@ body {
 
 .hamburger-header {
   color:#fff;
-  border-bottom: 1px solid #439aa5;
+  border-bottom: 3px solid #439aa5;
+  border-bottom-width: 50px; 
 }
 
 /* banners */
