Adding heading styles

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -144,7 +144,7 @@ body {
 .hamburger-header {
   color:#fff;
   border-bottom: 3px solid #439aa5;
-  border-bottom-width: 50px; 
+  border-width: 50px; 
 }
 
 /* banners */
