--- a/public/css/app.css
+++ b/public/css/app.css
@@ -129,12 +129,10 @@ body {
 }
 
 .hamburger-menu-list {
-  padding-top: 150px;
   background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: rgba(0, 0, 0, 0.4);
   -webkit-transition: all .50s ease-in-out;
   -moz-transition: all .50s ease-in-out;
   -o-transition: all .50s ease-in-out;
@@ -143,8 +141,17 @@ body {
 
 .hamburger-header {
   color:#fff;
-  border-bottom: 3px solid #439aa5;
+  border-bottom: 2px solid #439aa5;
   border-right-width: 50px; 
+}
+
+.hamburger-overlay {
+  background-color: rgba(0, 0, 0, 0.4);
+  padding-top: 150px;
+}
+
+.hamburger-menu-link {
+  color: #fff
 }
 
 /* banners */
