--- a/public/css/app.css
+++ b/public/css/app.css
@@ -148,6 +148,7 @@ body {
 .hamburger-overlay {
   background-color: rgba(0, 0, 0, 0.4);
   padding-top: 150px;
+  padding: 10px;
 }
 
 .hamburger-menu-link {
