--- a/public/css/app.css
+++ b/public/css/app.css
@@ -149,6 +149,7 @@ body {
   background-color: rgba(0, 0, 0, 0.4);
   padding-top: 150px;
   padding: 10px;
+  height: 100%;
 }
 
 .hamburger-menu-link {
