--- a/public/css/app.css
+++ b/public/css/app.css
@@ -142,7 +142,8 @@ body {
 .hamburger-header {
   color:#fff;
   border-bottom: 2px solid #439aa5;
-  border-right-width: 50px; 
+  border-right-width: 50px;
+  font-weight: bold;
 }
 
 .hamburger-overlay {
