--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -47,6 +47,7 @@
         <div class='grid-x grid-padding-x grid-padding-y hamburger-overlay'>
           <div class='cell'>
             <h4 class='hamburger-header'><%=pages.hamburger[i].title%></h4>
+            <hr class='hamburger-hr' />
             <ul class="vertical menu align-left">
               <% for(let j = 0; j < pages.hamburger[i].link.length; j++) { %>
                 <li>
