--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,7 +41,7 @@
       </div>
     </div>
   </div>
-  <div class='hamburger-menu-items grid-x medium-up-3'>
+  <div id='hamburger-menu' class='hamburger-menu-items grid-x medium-up-3'>
     <% for(let i = 0; i < pages.hamburger.length; i++) { %>
       <div class='hamburger-menu-list cell' style="background-image: url('<%= pages.hamburger[i].image %>');">
         <div class='grid-x grid-padding-x grid-padding-y hamburger-overlay'>
