--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
               </li>
               <% } %>
               <li>
-                <a class='top-bar-link'>
+                <a id='hamburger' class='top-bar-link'>
                   <i class="fi-list"></i>
                 </a>
               </li>
