--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -47,7 +47,7 @@
         <div class='grid-x grid-padding-x grid-padding-y hamburger-overlay'>
           <div class='cell'>
             <h4 class='hamburger-header'><%=pages.hamburger[i].title%></h4>
-            <hr class='hamburger-hr' />
+            <hr class='hamburger-hr' /><br/>
             <div>
               <ul class="vertical menu align-left">
                 <% for(let j = 0; j < pages.hamburger[i].link.length; j++) { %>
