--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,8 @@
               <% } %>
               <li>
                 <a id='hamburger' class='top-bar-link'>
-                  <i class="fi-list"></i>
+                  <i id='ham-open' class="fi-list"></i>
+                  <i id='ham-close' class="fi-x hide"></i>
                 </a>
               </li>
             </ul>
