--- a/public/css/app.css
+++ b/public/css/app.css
@@ -149,6 +149,26 @@ body {
   transition: all .50s ease-in-out;
 }
 
+#hm00 {
+  -webkit-transition: all .50s ease-in-out;
+  -moz-transition: all .50s ease-in-out;
+  -o-transition: all .50s ease-in-out;
+  transition: all .50s ease-in-out;
+}
+
+#hm01 {
+  -webkit-transition: all .80s ease-in-out;
+  -moz-transition: all .80s ease-in-out;
+  -o-transition: all .80s ease-in-out;
+  transition: all .80s ease-in-out;
+}
+#hm02 {
+  -webkit-transition: all 1.10s ease-in-out;
+  -moz-transition: all 1.10s ease-in-out;
+  -o-transition: all 1.10s ease-in-out;
+  transition: all 1.10s ease-in-out;
+}
+
 .hamburger-header {
   color:#fff;
   font-weight: bold;
