--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -44,7 +44,7 @@
   </div>
   <div id='hamburger-menu' class='hamburger-menu-items grid-x medium-up-3'>
     <% for(let i = 0; i < pages.hamburger.length; i++) { %>
-      <div class='hamburger-menu-list cell' style="background-image: url('<%= pages.hamburger[i].image %>');">
+      <div id='hm-0<%= i %>' class='hamburger-menu-list cell' style="background-image: url('<%= pages.hamburger[i].image %>');">
         <div class='grid-x grid-padding-x grid-padding-y hamburger-overlay'>
           <div class='cell'>
             <h4 class='hamburger-header'><%=pages.hamburger[i].title%></h4>
