--- a/views/pages/researchInterests.ejs
+++ b/views/pages/researchInterests.ejs
@@ -71,15 +71,119 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg
       </div>
       <% } else if (researchData.title === "Defining your composite 'biological' age")
       {%>
-        <p><em>“Why people age differently?”</em></p>
-        <p>Although, one’s chronological age maybe the same (the age that you calculate from your birth certificate), two people who are 65, rarely feel the same. One seems healthy, strong, may complain occasionally about joint pain- but overall is fit, whereas, the other suffers from diabetes, dementia and heart disease. WHY? 
-        </p>
-        <p>
-          When most of us think about AGE, we are always talking about our CHRONOLOGICAL AGE: How old we are. Not how old we actually feel- our BIOLOGICAL AGE. This distinction is very important, because people AGE differently! 
-        </p>
-        <p>
-          We are looking at what is inherently different in ‘fast agers’ (people who seem to age quickly- have multiple diseases etc) vs ‘slow agers’ (people who seem to be healthy in their 70s). Collaborating with a set of talented geriatricians, data analysts and biologists we want to find a unique fingerprint that differentiates between these two groups.
-        </p>
+        <div class='grid-x grid-padding-x'>
+          <div class='cell auto'>
+            <p><em>“Why people age differently?”</em></p>
+            <p>Although, one’s chronological age maybe the same (the age that you calculate from your birth certificate), two people who are 65, rarely feel the same. One seems healthy, strong, may complain occasionally about joint pain- but overall is fit, whereas, the other suffers from diabetes, dementia and heart disease. WHY? 
+            </p>
+            <p>
+              When most of us think about AGE, we are always talking about our CHRONOLOGICAL AGE: How old we are. Not how old we actually feel- our BIOLOGICAL AGE. This distinction is very important, because people AGE differently! 
+            </p>
+            <p>
+              We are looking at what is inherently different in ‘fast agers’ (people who seem to age quickly- have multiple diseases etc) vs ‘slow agers’ (people who seem to be healthy in their 70s). Collaborating with a set of talented geriatricians, data analysts and biologists we want to find a unique fingerprint that differentiates between these two groups.
+            </p>
+          </div>
+        </div>
+      <%
+      } else if (researchData.title === "Research Intrest") {
+      %>
+      <div class='grid-x grid-padding-x'>
+        <div class='cell auto'>
+          <h3 class='center' id='collaborators'>Collaborators</h3>
+          <hr class="center-ball">
+          <div class='grid-x grid-container medium-offset-3 large-offset-4 grid-padding-y grid-padding-x add-padd' >
+            <div class='medium-6 large-5 cell'>
+              <div class='grid-x grid-padding-x grid-margin-y'>
+                <div class='cell shrink border-right'>
+                  <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
+                </div>
+                <div class='cell auto border-right'>
+                  <h5>
+                    Patricia Opresko, Ph.D
+                  </h5> 
+                </div>
+                <div class='cell shrink'>
+                  <a href='http://www.opreskolab.com/' target='blank' ><i class="fi-web"></i></a>
+                </div>
+              </div>
+              <div class='grid-x grid-padding-x'>
+                <div class='cell shrink border-right'>
+                  <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
+                </div>
+                <div class='cell auto border-right'>
+                  <h5>Charleen Chu, Ph.D.
+                    </h5> 
+                </div>
+                <div class='cell shrink'>
+                  <a href='https://chulab.weebly.com/' target='blank' ><i class="fi-web"></i></a>
+                </div>
+              </div>
+              <div class='grid-x grid-padding-x'>
+                <div class='cell shrink border-right'>
+                  <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
+                </div>
+                <div class='cell auto border-right'>
+                  <h5>Steven Chan,MD, PhD, FAHA
+                    </h5> 
+                </div>
+                <div class='cell shrink'>
+                  <a href='https://www.sychanlab.pitt.edu/' target='blank' ><i class="fi-web"></i></a>
+                </div>
+              </div>
+              <div class='grid-x grid-padding-x'>
+                <div class='cell shrink border-right'>
+                  <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
+                </div>
+                <div class='cell auto border-right'>
+                  <h5>Tzahi Cohen-Karni
+                    </h5> 
+                </div>
+                <div class='cell shrink'>
+                  <a href='https://www.cohenkarni.com/' target='blank' ><i class="fi-web"></i></a>
+                </div>
+              </div>
+              <div class='grid-x grid-padding-x'>
+                <div class='cell shrink border-right'>
+                  <h5><span class="badge my-badge"><i class="fi-torso"></i></span></h5>
+                </div>
+                <div class='cell auto border-right'>
+                  <h5>Michael Jurckzak
+                    </h5> 
+                </div>
+                <div class='cell shrink'>
+                  <a href='https://profiles.dom.pitt.edu/faculty_info.aspx/Jurczak6570' target='blank' ><i class="fi-web"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <h3 class='center' id='resources'>Resources</h3>
+          <hr class="center-ball">
+          <div class='grid-x grid-container grid-padding-x grid-padding-y medium-up-1 add-padd' >
+            <div class='cell'>
+              <h4 class='bold'>Aging related resources</h4>
+              <p>
+                AFAR: <a href='https://www.afar.org/'>https://www.afar.org/</a><br/>
+                Aging Research and Drug Discovery Meeting: <a href='http://www.agingpharma.org'>http://www.agingpharma.org</a><br/>
+                Aging Science talks: <a href='http://www.lamminglab.org/agingscitalks.html'>http://www.lamminglab.org/agingscitalks.html</a><br/>
+                CSH Mechanism of Aging: <a href='https://meetings.cshl.edu/meetings.aspx?meet=aging&year=20'>https://meetings.cshl.edu/meetings.aspx?meet=aging&year=20</a>
+              </p>
+            </div>
+            <div class='cell'>
+              <h4 class='bold'>Metabolism related resources</h4>
+              <p>
+                Cold Spring Harbour Laboratory: Evolving Concept of Mitochondria: <a href='http://library.cshl.edu/Meetings/Mitochondria/program.php'>http://library.cshl.edu/Meetings/Mitochondria/program.php</a><br/>
+                Metabolomics: Understanding Metabolism in the 21st Century <a href='https://www.futurelearn.com/courses/metabolomics'>https://www.futurelearn.com/courses/metabolomics</a>
+              </p>
+            </div>
+            <div class='cell'>
+              <h4 class='bold'>COVID-19</h4>
+              <p>
+                State Updates: <a href='https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx'>https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
       <%
       }
       %>
