Adding other pages

--- a/views/pages/researchInterests.ejs
+++ b/views/pages/researchInterests.ejs
@@ -85,7 +85,7 @@ style='background-image:url("<% if(dirName) { %><%=dirName%><%}%>/img/bg/bg2.jpg
           </div>
         </div>
       <%
-      } else if (researchData.title === "Research Intrest") {
+      } else if (researchData.title === "Research Interests") {
       %>
       <div class='grid-x grid-padding-x'>
         <div class='cell auto'>
