--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,3 +3,5 @@
 <script src="<% if(dirName) { %><%=dirName%><%}%>/js/vendor/what-input.js"></script>
 <script src="<% if(dirName) { %><%=dirName%><%}%>/js/vendor/foundation.js"></script>
 <script src="<% if(dirName) { %><%=dirName%><%}%>/js/app.js"></script>
+<script src="<% if(dirName) { %><%=dirName%><%}%>/js/jquery.event.move.js"></script>
+<script src="<% if(dirName) { %><%=dirName%><%}%>/js/jquery.twentytwenty.js"></script>
