--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,5 +8,6 @@
     <link rel="stylesheet" href="<% if(dirName) { %><%=dirName%><%}%>/css/foundation.css">
     <link rel="stylesheet" href="<% if(dirName) { %><%=dirName%><%}%>/css/svg/foundation-icons.css" />
     <link rel="stylesheet" href="<% if(dirName) { %><%=dirName%><%}%>/css/app.css">
+    <link href="<% if(dirName) { %><%=dirName%><%}%>/css/twentytwenty.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
