--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,6 +9,12 @@ style='background-image:url("img/bg/bg1.jpg")'>
     </h1>
   </div>
 </div>
+<div class="large-8 columns">
+  <div class="twentytwenty-container">
+    <img src="img/bg/bg1.jpg" />
+    <img src="img/bg/bg2.jpg" />
+  </div>
+</div>
 <div class='grid-x grid-padding-x grid-container grid-padding-y add-padd'  data-equalizer>
   <div class='medium-6 large-7 cell out-vc'  data-equalizer-watch>
     <div class='in-vc'>
