--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,10 +9,10 @@ style='background-image:url("img/bg/bg1.jpg")'>
     </h1>
   </div>
 </div>
-<div class="large-8 columns">
-  <div class="twentytwenty-container">
-    <img src="img/bg/bg1.jpg" />
-    <img src="img/bg/bg2.jpg" />
+<div class="large-8 cell">
+  <div class="twentytwenty-container" style='height: 400px'>
+    <img src="img/1_1.jpg" />
+    <img src="img/1_2.jpg" />
   </div>
 </div>
 <div class='grid-x grid-padding-x grid-container grid-padding-y add-padd'  data-equalizer>
